# RAG_Dropbox

./: .gitignore  README.md  dropbox_test.py  indexing.py  pyproject.toml  rag.py
app/: Abstract.pptx  OCR.pptx  OCR_example.docx  dropbox_utils.py  main.py  ocr_utils.py  rag.py  text_extraction_utils.py  vector_db.py
